# open-models-iecho

./: 404.html  CONTRIBUTING.md  README.md  api.html  blog.html  docker-compose.yaml  index.html  sitemap.xml
.devcontainer/: README.md
ansible/: deploy-to-node.yaml
api/: auth-check.html  callback-debug.html  callback-discord.html  callback-github.html  callback-google.html  check-user-auth.html  close-collective-task.html  create-api-client.html  create-assistant-message.html  create-chat.html  create-frontend-user.html  create-prompter-message.html  create-worker.html  delete-chat.html  delete-user-1.html  delete-user.html  delete-worker.html  get-available-auth-providers.html  get-backend-settings-full.html  get-backend-settings-public.html  get-builtin-plugins.html  get-cached-stats-all.html  get-cached-stats.html  get-chat.html  get-children-by-frontend-id.html  get-children.html  get-conv-by-frontend-id.html  get-conv.html  get-descendants-by-frontend-id.html  get-descendants.html  get-flagged-messages.html  get-leaderboard.html  get-longest-conv-by-frontend-id.html  get-longest-conv.html  get-max-children-by-frontend-id.html  get-max-children.html  get-message-1.html  get-message-by-frontend-id.html  get-message-stats.html  get-message-tree-state.html  (+63 more)
backend/: README.md
blog/: 2023-02-11-architecture.html  archive.html  atom.xml  feed.json  rss.xml  tags.html  we-need-your-help.html
copilot/: .workspace  README.md
oasst-data/: README.md  pyproject.toml
oasst-shared/: pyproject.toml
oasst-shared/oasst_shared/exceptions/: oasst_api_error.py
(+578 files in other folders)
