[project]
name = "oasst_data"
description = "Open Models iEcho Data Module"
version = "1.0.0"
authors = [
    { name = "open-models-platform", email = "contact@open.models.platform" }
]
dependencies = [
    "pydantic>=1.10.4",
    "loguru==0.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
